welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:3: error: illegal start of simple pattern
  for (case <-1 to 5){
       ^Poucet:8: error: '<-' expected but '}' found.
}
^